# nonebot-adapter-nonebot

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
src/nonebot/adapters/nonebot/: __init__.py  adapter.py  bot.py  event.py  message.py
