[project]
name = "nonebot-adapter-nonebot"
version = "0.1.0"
description = "Adapter for other all adapters"
authors = [
    {name = "RF-Tar-Railt",email = "3165388245@qq.com"},
]
dependencies = [
    "nonebot2>=2.1.0",
    "nonebot-plugin-alconna>=0.31.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.10.1",
    "ruff>=0.1.4",
    "pre-commit>=3.5.0",
    "nonebot2[httpx,websockets]>=2.1.2",
    "nonebot-adapter-qq>=1.0.1",
    "nonebot-adapter-onebot>=2.3.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
]

[tool.pdm.build]
includes = ["src/nonebot"]

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

line-length = 110
target-version = "py38"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pdm.scripts]
test = "pytest -v -n auto -W ignore ./tests/"
format = { composite = ["isort ./src/","black ./src/","ruff ./src/"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
